# memwatch

./: CMakeLists.txt  Makefile  README.md
hotkey/: hotkey.c  hotkey.def
memwatch/: CHANGES.txt  Makefile.am  application.c  callbacks.c  callbacks.h  configure.in  dlg_main.c  dlg_main.h  dlg_preset.c  dlg_preset.h  dlg_variable.c  dlg_variable.h  interface.c  interface.h  main.c  main.h  memwatch.glade  memwatch.gladep  profile.c  profile.h  system.c  system.h  variable.c  variable.h
memwatch/devcpp/: config.h  memwatch.dev
memwatch/msvc/: config.h  memwatch.dsp  memwatch.dsw
msvc/: hotkey.vcproj  memwatch.sln  memwatch.vcproj
redist/: MemWatch.exe.lnk
redist/profiles/: bf2.profile
